--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </a>
 
       <nav arial-label="primaria">
-        <ul class="header-menu cor-0">
+        <ul class="header-menu cor-0 font-1-m">
           <li> <a href="./bicicletas.html">Bicicletas</a></li>
           <li> <a href="./seguros.html">Seguros</a></li>
           <li> <a href="./contato.html">Contato</a></li>
@@ -35,8 +35,8 @@
   <main class="introducao-bg">
     <div class="introducao">
       <div class="introducao-conteudo">
-        <h1 class="texto-grande cor-0">Bicicletas feitas sob medida<span class="cor-p1">.</span></h1>
-        <p class="texto-medio cor-5">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
+        <h1 class="font-1-xxl cor-0">Bicicletas feitas sob medida<span class="cor-p1">.</span></h1>
+        <p class="font-2-l cor-5">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
         <a class="botao" href="./bicicletas.html">Selecione a sua</a>
       </div>
       <div>
@@ -44,8 +44,30 @@
       </div>
     </div>
   </main>
+  <article class="bicicletas-lista">
+  <h2 class="font-1-xxl">Escolha a sua<span class="cor-p1">.</span></h2>
 
-  <h2>Escolha a sua</h2>
+  <ul>
+    <a href="./bicicletas/magic.html">
+    <li><img src="img/bicicletas/magic-home.jpg" alt="Bicicleta Preta">
+    <h3 class="font-1-xl">Magic Might</h3>
+    <span class="font-2m cor-8">R$ 2499</span>
+  </a>
+    </li>
+    <a href="./bicicletas/nimbus.html">
+      <li><img src="img/bicicletas/magic-home.jpg" alt="Bicicleta Preta">
+      <h3 class="font-1-xl">Nimbus Stark</h3>
+      <span class="font-2m cor-8">R$ 4000</span>
+    </a>
+      </li>
+      <a href="./bicicletas/nebula.html">
+        <li><img src="img/bicicletas/magic-home.jpg" alt="Bicicleta Preta">
+        <h3 class="font-1-xl">Nebula Cosmic</h3>
+        <span class="font-2m cor-8">R$ 3999</span>
+      </a>
+        </li>
+  </ul>
+  </article>
 
 </body>
 
